arch through dugan

--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -59,7 +59,7 @@ permalink: /albertson.html
     <em>1872-1964</em>
     <br>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA">Crystal Palace Public Market</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/crystal.html">Crystal Palace Public Market</a></p>
     <br>
     <p>Abraham Horace Albertson was born in Hope, New Jersey and graduated from Columbia University in 1895. Albertson moved to Seattle in 1907 in order to contribute plans for the University of Washington under the Metropolitan Building Company. 
     By the time the plans for Crystal Palace were created in 1926, collaborators Joseph Wade Wilson and Paul David Richardson had been promoted to associates.</p>
