--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -59,7 +59,7 @@ permalink: /bassindale.html
     <em>1875-1945</em>
     <br>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA">N.P.B.A. Hospital</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/npba.html">N.P.B.A. Hospital</a></p>
     <br>
     <p>Lambert Bassindale was born in Racine, Wisconsin in 1875 and graduated from the Chicago Art Institute. 
       After moving to St. Paul in 1918 to partner with associate architect Charles Frost, Bassindale began a long career of designing structures for the Northern Pacific Railroad, including office buildings, Hospitals and Nursing Homes. 
