--- a/pages/donnelly.html
+++ b/pages/donnelly.html
@@ -72,7 +72,7 @@ permalink: /donnelly.html
       <br>
       <sub>Donnelly Hotel 
       <br>
-      TPL Historic Building Files (BU-11892), 1938-04-24
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16593/rec/1">(BU-10989)</a>, 1938-04-24
       <br>
       Courtesy Northwest Room</sub>
     </div>
