--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -62,15 +62,15 @@ permalink: /dugan.html
     <br>
     <p><strong>Lost Tacoma Locations:</strong>
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
+    <a href="https://aweymo.github.io/losttacoma/donnelly.html">Donnelly Site Hotel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
+    <a href="https://aweymo.github.io/losttacoma/lawrence.html">Lawrence Block Remodel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a>
+    <a href="https://aweymo.github.io/losttacoma/defiance.html">Point Defiance Pavilion</a>
     <br> 
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt117">Visitation Academy</a> 
+    <a href="https://aweymo.github.io/losttacoma/visitation.html">Visitation Academy</a> 
     <br>
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">Washington Hardware Company Remodel</a> </p>
+    <a href="https://aweymo.github.io/losttacoma/hardware.html">Washington Hardware Company Remodel</a> </p>
     <br>
     <p>Earl N. Dugan was born in Perry, Iowa and graduated from the University of Illinois in 1906. After working for a short while in Chicago and San Francisco, he arrived in Tacoma working independently as a draftsman. 
       This led to partnerships with <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a> as well as <a href="https://aweymo.github.io/losttacoma/mock.html">Mock</a> and Morrison. 
@@ -84,6 +84,9 @@ permalink: /dugan.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
+    <br> 
+    <br> 
+    <br> 
     <p><strong>Other Work:</strong>
     <br> 
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>
@@ -113,7 +116,7 @@ permalink: /dugan.html
     <br>
     <sub>Point Defiance Pavilion
     <br>  
-    Richards Studio (D34612-73), ca. 1934 
+    Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/26249/rec/1">(D7207-6)</a>, ca. 1934 
     <br>
     Courtesy Northwest Room</sub>
   </div>
@@ -122,7 +125,7 @@ permalink: /dugan.html
     <br>
     <sub>Point Defiance Pavilion
     <br>
-    Richards Studio (D7207-6), 04-24-1938 
+    Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/24136/rec/1">(D34612-73)</a>, 04-24-1938 
     <br>
     Courtesy Northwest Room</sub>
   </div>
@@ -130,7 +133,7 @@ permalink: /dugan.html
 
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt048"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
     <br>
     <sub>Donnelly Hotel Site
     <br>
@@ -143,7 +146,7 @@ permalink: /dugan.html
     <br>
     <sub>Washington Hardware Company Remodel
     <br>
-    TPL Historic Building Files (BU-10989)
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16593/rec/1">(BU-10989)</a>
     <br>
     Courtesy Northwest Room</sub>
   </div>
