--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -59,7 +59,7 @@ permalink: /couchot.html
     <em>1869-1933</em>
     <br>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA">Sperry Flour Company Elevator</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/sperry.html">Sperry Flour Company Elevator</a></p>
     <br>
     <p>Maurice C. Couchot was an architect and engineer from San Francisco that was inspired to become a pioneer of reinforced concrete building methods after experiencing the devastation of the 1906 earthquake. 
       Couchot was the company engineer for Sperry Flour and contributed industrial plans for structures in California and Washington.</p>
@@ -80,7 +80,7 @@ permalink: /couchot.html
      <br>
      <sub>Sperry Flour Company Elevator
      <br>
-     TPL Historic Building Files (BU-13919), c.a 1920
+     TPL Historic Building Files <a href="https://aweymo.github.io/losttacoma/browse.html#3%20SCHUSTER%20PARKWAY%2C%20TACOMA">(BU-13919)</a>, c.a 1920
      <br>
      Courtesy Northwest Room</sub>
      <br>
