--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -117,7 +117,7 @@ permalink: /abattoir.html
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/3068/"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens.jpeg" alt="Golden Jubilee Parade, Carsten's Packing Company float, on July 22, 1939. Man is holding huge carving knife in front of a model of large ham; little girls are sitting on float. Old Chamber of Commerce Building on Pacific Avenue in background." style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens.jpeg" alt="Golden Jubilee Parade, Carsten's Packing Company float, on July 22, 1939. Man is holding huge carving knife in front of a model of large ham; little girls are sitting on float. Old Chamber of Commerce Building on Pacific Avenue in background." style="max-width:100%;"></a>
       <br>
       <sub>Golden Jubilee Parade, Carsten's Packing Company float</sub>
       <br>
