--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -68,7 +68,7 @@ permalink: /apartment.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE%2C%20TACOMA" alt="John Buffelen" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_buffelen.jpeg" alt="John Buffelen" style="max-width:100%;"></a>
     <br>
     <sub>John Buffelen</sub>
     <br>
