--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -56,30 +56,18 @@ permalink: /flickinger.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Harry E. Flickinger</b></p></h4>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">Garage for Jail and Public Safety Building</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/garage.html">Garage for Jail and Public Safety Building</a></p>
     <br>
     <p>Harry E. Flickinger was a draftsman for the City of Tacoma in the 1940s. 
       One of Flickinger's few appearances in the historical record was in a profile for the Tacoma Times with an accompanying photo by the Richards Studio of the designer sitting in front of a detailed custom model train set.</p>
     <br>
-    <sub>Sources: "Tacoma Times - July 23, 1940 - Page 4"</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32495/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/p_flickinger.jpg" alt="Harry E. Flickinger" style="max-width:100%;"></a>
-  </div>
-</div>
-
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052"><img src="https://aweymo.github.io/losttacoma/objects/ ext_garage" alt="Garage for Jail and Public Safety Building" style="max-width:100%;"></a>
     <br>
-    <sub>Garage for Jail and Public Safety Building
-    <br> 
-    TPL Historic Building Files (BU-12819), 10-02-1930
+    <sub>Harry E. Flickinger
     <br>
-    Courtesy Northwest Room</sub>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
+    Tacoma Times - July 23, 1940 - Page 4"</sub>
   </div>
 </div>
   
