--- a/pages/gove.html
+++ b/pages/gove.html
@@ -58,7 +58,7 @@ permalink: /gove.html
     <br>
     <em>1870-1956</em>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053">Hawthorne School</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/hawthorne.html">Hawthorne School</a></p>
     <br>
     <p>George Gove was born in Rochester, MN in 1970 and arrived in Tacoma in 1908. From that point, Gove worked principly with <a href="https://aweymo.github.io/losttacoma/heath.html">Frederick Henry Heath</a> as consulting architects for the Tacoma Board of Education. 
       This would provide subsequent contracts for the Central School, Lincoln High School, the Stadium High School gymnasium and the first branch of the South Tacoma Library. 
@@ -72,27 +72,11 @@ permalink: /gove.html
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/17963/rec/5">South Tacoma Library Branch #1, Tacoma, WA, (1911)</a> </p>
     <br>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_gove.jpeg" alt="George Gove" style="max-width:100%;"></a>
-  </div>
-</div>
-      
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne.jpeg" alt="Hawthorne School" style="max-width:100%;"></a>
-    <br>
-    <sub>Hawthorne School
-    <br>  
-    TPL General Collection (TPL-2868), c.a. 1913
-    <br> 
-    Courtesy Northwest Room</sub>
-    <br>
-  </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <br>
     <sub>Sources: “PCAD - George Gove.”, “Tribune (Published as THE NEWS TRIBUNE) - August 31, 1956 - Page 13,”, “The Tacoma Daily News - July 23, 1910 - Page 4,”, “The Tacoma Daily Ledger - January 1, 1913”, “The Tacoma Times - February 12, 1913”</sub>
     <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/p_gove.jpeg" alt="George Gove" style="max-width:100%;"></a>
   </div>
 </div>
   
