--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -60,10 +60,10 @@ permalink: /griffin.html
     <br>
     <br>
     <p><strong>Lost Tacoma Locations: </strong>
-    <br>  
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
+    <a href="https://aweymo.github.io/losttacoma/arlington.html">Arlington Elementary School Addition</a>
+    <br>  
+    <a href="https://aweymo.github.io/losttacoma/roosevelt.html">Roosevelt School</a></p>
     <br>
     <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. 
       After moving to Seattle, Griffin formed a partnership with  <a href="https://aweymo.github.io/losttacoma/hill.html">Irwin H. Hill</a>, Arnott Woodroofe and later with<a href="https://aweymo.github.io/losttacoma/mock.html"> Ernest T. Mock</a>. 
@@ -80,7 +80,7 @@ permalink: /griffin.html
     <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Jack D. Griffin.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - August 31, 1927 - Page 7” </sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=griffin"><img src="https://aweymo.github.io/losttacoma/objects/p_griffin.jpeg" alt="Jack D. Griffin" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#griffin"><img src="https://aweymo.github.io/losttacoma/objects/p_griffin.jpeg" alt="Jack D. Griffin" style="max-width:100%;"></a>
   </div>
 </div>
       
@@ -90,7 +90,7 @@ permalink: /griffin.html
     <br>
     <sub>Roosevelt School 
     <br>   
-    Marvin D. Boland Collection (BOLAND-B17893), 1928-01-12 
+    Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 1928-01-12 
     <br> 
     Courtesy Northwest Room</sub>
     <br>
@@ -100,7 +100,7 @@ permalink: /griffin.html
     <br>
     <sub>Arlington Elementary School Addition
       <br>   
-    TPL Historic Building Files (BU-11303), 12-11-1926
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7337/rec/1">(BU-11303)</a>, 12-11-1926
     <br>  
     Courtesy Northwest Room</sub>
     <br>
