--- a/pages/heath.html
+++ b/pages/heath.html
@@ -60,16 +60,16 @@ permalink: /heath.html
     <br>
     <br>
     <p><strong>Lost Tacoma Locations: </strong>
-    <br>  
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053">Hawthorne School</a> 
+    <br> 
+    <a href="https://aweymo.github.io/losttacoma/edison.html">Edison School Annex</a> 
     <br>
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">Edison School Annex</a></p>
+    <a href="https://aweymo.github.io/losttacoma/hawthorne.html">Hawthorne School</a></p>
     <br>
     <p>Frederick Henry Heath was born in LaCrosse, Wisconsin in 1861 and graduated from Powell's Academy, a parochial institution created by Rev William R. Powell in Caledonia, Minnesota. 
       Heath moved to Tacoma in 1893 and formed a partnership with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a>  and A. Walter Spaulding in 1901. 
       It was during this partnership that Heath would become the School Architect for the Tacoma School District from 1903 through 1920, when he had moved on to partner with <a href="https://aweymo.github.io/losttacoma/gove.html">George Gove</a> 
       and draftsman Herbert A. Bell as Heath, Gove & Bell. 
-      Towards the end of his life, Heath collaborated with his son Frederick Jr. to help promote and sell his invention, "Heath Cubes," a square, hollow tile building material.</p>
+      Towards the end of his life, Heath collaborated with his son Frederick Jr. to help promote and sell his invention, <a href="http://lcweb2.loc.gov/master/pnp/habshaer/al/al1200/al1289/data/al1289data.pdf">"Heath Cubes,"</a> a square, hollow tile building material.</p>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Frederick%20Henry%20Heath"><img src="https://aweymo.github.io/losttacoma/objects/p_heath.png" alt="Frederick Henry Heath" style="max-width:100%;object-fit: contain;"></a>
@@ -99,7 +99,7 @@ permalink: /heath.html
     <br>
     <sub>Hawthorne School
       <br>  
-    TPL Historic Building Files (BU-10009)
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36092/rec/8">(BU-10009)</a>
     <br>  
     Courtesy Northwest Room</sub>
     <br>
@@ -109,7 +109,7 @@ permalink: /heath.html
     <br>
     <sub>Edison School
     <br>
-    TPL Historic Building Files (BU-12230)
+    Photo by Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23796/rec/1">(D48345-1)</a> 
     <br>  
     Courtesy Northwest Room</sub>
   </div>
