--- a/pages/hill.html
+++ b/pages/hill.html
@@ -61,11 +61,11 @@ permalink: /hill.html
     <br>
     <p><strong>Lost Tacoma Locations: </strong>
     <br>    
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a>
+    <a href="https://aweymo.github.io/losttacoma/arlington.html">Arlington Elementary School Addition</a>
     <br>    
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>
+    <a href="https://aweymo.github.io/losttacoma/roosevelt.html">Roosevelt School</a>
     <br>    
-    <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA">Talmud Torah Synagogue</a></p>
+    <a href="https://aweymo.github.io/losttacoma/talmud.html">Talmud Torah Synagogue</a></p>
     <br>
     <p>Irwin (sometimes Irwyn) Horatio Hill was born in Illinois and graduated from the University of Illinois and Chicago Art Institute. 
       After moving to Tacoma in 1903, Hill partnered with George Bullard, then Woodroofe and Griffin, then <a href="https://aweymo.github.io/losttacoma/hill.html">Hill,</a> <a href="https://aweymo.github.io/losttacoma/mock.html">Mock</a> 
@@ -94,7 +94,7 @@ permalink: /hill.html
     <br>
     <sub>Roosevelt School 
     <br>   
-    Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+    Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 12-01-1928
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -103,7 +103,7 @@ permalink: /hill.html
     <br>
     <sub>Arlington Elementary School Addition
     <br>   
-    TPL Historic Building Files (BU-11303), 12-11-1926
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7337/rec/1">(BU-11303)</a>, 12-11-1926
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -115,7 +115,7 @@ permalink: /hill.html
       <br>
       <sub>Talmud Torah Synagogue
       <br>   
-      Richards Studio (D141770-15), 05-28-1964
+      Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18739/rec/1">(D141770-15)</a>, 05-28-1964
       <br>  
       Courtesy Northwest Room</sub>
     </div>
@@ -124,7 +124,7 @@ permalink: /hill.html
       <br>
       <sub>Talmud Torah Synagogue 
       <br>   
-      Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
+      Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/29138/rec/1">(BOLAND-B18322)</a>, 04-08-1928
       <br> 
       Courtesy Northwest Room</sub>
     </div>
