--- a/pages/talmud.html
+++ b/pages/talmud.html
@@ -73,7 +73,7 @@ permalink: /talmud.html
       <br>
       <sub>Talmud Torah Synagogue
       <br>   
-      Richards Studio (D141770-15), 05-28-1964
+      Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18739/rec/1">(D141770-15)</a>, 05-28-1964
       <br>  
       Courtesy Northwest Room</sub>
     </div>
