--- a/pages/edison.html
+++ b/pages/edison.html
@@ -75,7 +75,7 @@ permalink: /edison.html
       <br>
       <sub>Edison School
       <br>
-      TPL Historic Building Files (BU-12230)
+      Photo by Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23796/rec/1">(D48345-1)</a> 
       <br>  
       Courtesy Northwest Room</sub>
     </div>
