--- a/pages/lance.html
+++ b/pages/lance.html
@@ -59,7 +59,7 @@ permalink: /lance.html
     <em>1877-1964</em>
     <br>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA">Mottau Building</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/mottau.html">Mottau Building</a></p>
     <br>
     <p>Gaston C. Lance was born in Bucharest, Romania to French parents in 1877 before being orphaned at the age of twelve. 
       After traveling and working a number of vocational jobs, Lance settled in Seattle in 1906, where worked for the Morrell Artistic Foundry and opened up his own ship design and carpentry shop. 
@@ -80,7 +80,9 @@ permalink: /lance.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Gaston%20C.%20Lance"><img src="https://aweymo.github.io/losttacoma/objects/p_lance.jpg" alt="Gaston C. Lance" style="max-width:100%;object-fit: contain;"></a>
     <br>
-    <sub>Gaston C. Lance standing with one of his creations for Weaver Studios as the Art Director, Richards Studio (LANCE-001), c.a. 1926
+    <sub>Gaston C. Lance with one of his creations as the Art Director for Weaver Productions
+    <br>  
+    Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32046/rec/1">(LANCE-001)</a>, c.a. 1926
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -93,11 +95,11 @@ permalink: /lance.html
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt056"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
     <br>
     <sub>Mottau Building
     <br>   
-    Historic Property Inventory Forms (BU-3659), 06-30-1993
+    Historic Property Inventory Forms <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18636/rec/1">(BU-3659)</a>, 06-30-1993
     <br>  
     Courtesy Northwest Room</sub>
   </div>
