--- a/pages/mallis.html
+++ b/pages/mallis.html
@@ -59,7 +59,7 @@ permalink: /mallis.html
     <em>1883-1954</em>
     <br>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt049">Dupont School Building Addition</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/dupont.html">Dupont School Building Addition</a></p>
     <br>
     <p>William Mallis was born in Auchterarder, Scotland and received architectural training during a four year apprenticeship in Perth, Scotland. 
       After working under John H. Felt, one of the most prolific school designers in Kansas, Mallis moved to Seattle in 1918 and worked as a structural draftsman for the Pacific Coast Company. 
@@ -79,7 +79,7 @@ permalink: /mallis.html
     <br>
     <sub>Dupont School Building 
     <br> 
-    Richards Studio (D85513-2), 10-01-1954
+    Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/22375/rec/1">(D85513-2)</a>, 10-01-1954
     <br>  
     Courtesy Northwest Room</sub>
   </div>
