--- a/pages/mock.html
+++ b/pages/mock.html
@@ -61,14 +61,14 @@ permalink: /mock.html
     <br>
     <p><strong>Lost Tacoma Locations: </strong>
     <br>    
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a>
+    <a href="https://aweymo.github.io/losttacoma/arlington.html">Arlington Elementary School Addition</a>
     <br>    
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>
+    <a href="https://aweymo.github.io/losttacoma/roosevelt.html">Roosevelt School</a>
     <br>    
-    <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA">Talmud Torah Synagogue</a></p>
+    <a href="https://aweymo.github.io/losttacoma/talmud.html">Talmud Torah Synagogue</a></p>
     <br>
     <p>Ernest Thornton Mock is one of the few other architects in this collection that were born in Tacoma. 
-      Mock apprenticed for twelve years under Bullard & <a href="https://aweymo.github.io/losttacoma/russell.html">Russell</a> before partnering with <a href="https://aweymo.github.io/losttacoma/hill.html">Hill</a> and 
+      Mock apprenticed for twelve years under Bullard and <a href="https://aweymo.github.io/losttacoma/russell.html">Russell</a> before partnering with <a href="https://aweymo.github.io/losttacoma/hill.html">Hill</a> and 
       <a href="https://aweymo.github.io/losttacoma/griffin.html">Griffin</a> in 1918. 
       When Griffin left to pursue contracts in Lewis County, he was replaced by Nelson J. Morrison and shared a space in the Perkins Building. 
       Mock's death in 1950 inspired the 88th annual reunion of the Scottish Rite Masons in Tacoma, to honor his 25 years of service. </p>
@@ -85,7 +85,7 @@ permalink: /mock.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=mock"><img src="https://aweymo.github.io/losttacoma/objects/p_mock.jpeg" alt="Ernest Thornton Mock" style="max-width:100%;object-fit: contain;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#mock"><img src="https://aweymo.github.io/losttacoma/objects/p_mock.jpeg" alt="Ernest Thornton Mock" style="max-width:100%;object-fit: contain;"></a>
   </div>
 </div>
       
@@ -95,7 +95,7 @@ permalink: /mock.html
     <br>
     <sub>Roosevelt School 
     <br>  
-    Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+    Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 12-01-1928
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -104,7 +104,7 @@ permalink: /mock.html
     <br>
     <sub>Arlington Elementary School Addition
     <br> 
-    TPL Historic Building Files (BU-11303), 12-11-1926
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7337/rec/1">(BU-11303)</a>, 12-11-1926
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -116,7 +116,7 @@ permalink: /mock.html
       <br>
       <sub>Talmud Torah Synagogue
       <br>
-      Richards Studio (D141770-15), 05-28-1964
+      Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18739/rec/1">(D141770-15)</a>, 05-28-1964
       <br>  
       Courtesy Northwest Room</sub>
     </div>
@@ -125,7 +125,7 @@ permalink: /mock.html
       <br>
       <sub>Talmud Torah Synagogue
       <br>
-      Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
+      Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/29138/rec/1">(BOLAND-B18322)</a>, 04-08-1928
       <br>  
       Courtesy Northwest Room</sub>
     </div>
