--- a/pages/mottau.html
+++ b/pages/mottau.html
@@ -76,7 +76,7 @@ permalink: /mottau.html
     <br>
     <sub>Mottau Building
     <br>   
-    Historic Property Inventory Forms (BU-3659), 06-30-1993
+    Historic Property Inventory Forms <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18636/rec/1">(BU-3659)</a>, 06-30-1993
     <br>  
     Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
