--- a/pages/raleigh.html
+++ b/pages/raleigh.html
@@ -59,9 +59,12 @@ permalink: /raleigh.html
     <em>1880-1964</em>
     <br>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#625 COMMERCE ST, TACOMA">Comfort Station for Women</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/comfort.html">Comfort Station for Women</a></p>
     <br>
-    <p>Wilbur C. Raleigh was working under Mayor Angelo V. Fawcett as a city engineer when he was commissioned to create these plans in 1910. The space was intended to utilize the wood storage room under the sidewalk at the south end of the City Hall building as a women's restroom, urged by the growing Women's Club movement happening in Tacoma at that time. The space appears to never have been constructed. Raleigh's informal technical drawing style, with what may be waxed pencil, are unique to other technical drawings in the Lost Tacoma collection. Raleigh subsequently worked as the secretary for the Havelock C. Boyle & Co. and the President of the Raleigh-Hayward Company, realtors in the Rust building.</p>
+    <p>Wilbur C. Raleigh was working under Mayor Angelo V. Fawcett as a city engineer when he was commissioned to create these plans in 1910. 
+      The space was intended to utilize the wood storage room under the sidewalk at the south end of the City Hall building as a women's restroom, urged by the growing Women's Club movement happening in Tacoma at that time. 
+      The station appears to never have been constructed. Raleigh's informal technical drawing style, with what may be waxed pencil, are unique to other technical drawings in the Lost Tacoma collection. 
+      Raleigh subsequently worked as the secretary for the Havelock C. Boyle & Co. and the President of the Raleigh-Hayward Company, realtors in the Rust building.</p>
     <br>
     <p><strong>Other Work:</strong> <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/6482/rec/2">City Shops and Stables Building</a> </p>
     <br>
