--- a/pages/rowlands.html
+++ b/pages/rowlands.html
@@ -56,7 +56,7 @@ permalink: /rowlands.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Thomas Mck. Rowlands</b></p></h4>
     <br>
-    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt051">Fireboat for the City of Tacoma</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/fireboat.html">Fireboat for the City of Tacoma</a></p>
     <br>
     <p>Thomas Mck. Rowlands was a professor of naval architecture at the University of Washington. 
       In addition to education and commission work for the City of Tacoma, Rowlands would charter his yacht <i>Bettybelle</i> for trips around Lake Washington, British Columbia and Alaska.</p>
