--- a/pages/dupont.html
+++ b/pages/dupont.html
@@ -76,7 +76,7 @@ permalink: /dupont.html
       <br>
       <sub>Dupont School Building 
       <br> 
-      Richards Studio (D85513-2), 10-01-1954
+      Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/22375/rec/1">(D85513-2)</a>, 10-01-1954
       <br>  
       Courtesy Northwest Room</sub>
     </div>
