--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -53,7 +53,7 @@ permalink: /sutton.html
 <body>
 
 <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;max-height:700px;">
     <h4><p><b>Albert Sutton</b></p></h4>
     <br>
     <em>1867-1923</em>
@@ -61,13 +61,13 @@ permalink: /sutton.html
     <br>
     <p><strong>Lost Tacoma Locations: </strong>
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
+    <a href="https://aweymo.github.io/losttacoma/donnelly.html">Donnelly Site Hotel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
+    <a href="https://aweymo.github.io/losttacoma/lawrence.html">Lawrence Block Remodel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#934-36 BROADWAY, TACOMA">New York Waist House</a>
+    <a href="https://aweymo.github.io/losttacoma/waist.html">New York Waist House</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt100">Scandinavian American Bank Hotel</a></p>
+    <a href="https://aweymo.github.io/losttacoma/sabh.html">Scandinavian American Bank Hotel</a></p>
     <br>
     <p>Albert Sutton was born in Victoria, British Columbia, raised in Portland, Oregon and graduated from the University of California in Berkeley. 
       His first architectural partnership was with James Pickles in 1888, followed by a brief collaboration with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> which lasted only two years when Sutton relocated to San Francisco. 
@@ -76,15 +76,18 @@ permalink: /sutton.html
       Albert Sutton was a 33rd degree Mason, the highest rank within the organization.</p>
     <br>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
+  <div class="column right" style="background-color:#FFFFFF;max-height:700px;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Albert%20Sutton"><img src="https://aweymo.github.io/losttacoma/objects/p_sutton.jpeg" alt="Albert Sutton" style="max-width:100%;"></a>
   </div>
 </div>
       
 <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;max-height:700px;">
     <p><strong>Other Work:</strong>
-        <br>    
+        <br>
+        <br> 
+        <br> 
+        <br>     
         <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/3986/rec/2">Jonathan Smith Building</a> 
         <br>
         <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/11105/rec/8">Corydon Wagner House</a> 
@@ -94,33 +97,33 @@ permalink: /sutton.html
         <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Albert Sutton.”, “PCAD - Albert Sutton.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 19, 1923 - Page 2,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”</sub>
         <br>
   </div>
-  <div class="column right" style="background-color:#FFFFFF;">
+  <div class="column right" style="background-color:#FFFFFF;max-height:700px;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
     <br>
     <sub>Donnelly Hotel Site
     <br>  
-    TPL Historic Building Files (BU-11892), 1938-04-24
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/16593/rec/1">(BU-10989)</a>, 1938-04-24
     <br>
     Courtesy Northwest Room</sub>
   </div>
 </div>
   
 <div class="row">
-    <div class="column left" style="background-color:#FFFFFF;">
+    <div class="column left" style="background-color:#FFFFFF;max-height:700px;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
     <br>
     <sub>Lawrence Block Remodel
     <br>  
-    TPL Historic Building Files (BU-12730), c.a. 1934
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7619/rec/1">(BU-12730)</a>, c.a. 1934
     <br>
     Courtesy Northwest Room</sub>
     </div>
-    <div class="column right" style="background-color:#FFFFFF;">
+    <div class="column right" style="background-color:#FFFFFF;max-height:700px;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
       <br>
       <sub>New York Waist House
       <br>  
-      TPL Historic Building Files (BU-12524), 05-04-1927
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4087/rec/1">(BU-12524)</a>, 05-04-1927
       <br>
       Courtesy Northwest Room</sub>
     </div>
