--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -61,11 +61,11 @@ permalink: /whitney.html
     <br>
     <p><strong>Lost Tacoma Locations: </strong>
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
+    <a href="https://aweymo.github.io/losttacoma/lawrence.html">Lawrence Block Remodel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#934-36 BROADWAY, TACOMA">New York Waist House</a>
+    <a href="https://aweymo.github.io/losttacoma/waist.html">New York Waist House</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt100">Scandinavian American Bank Hotel</a></p>
+    <a href="https://aweymo.github.io/losttacoma/sabh.html">Scandinavian American Bank Hotel</a></p>
     <br>
     <p>Harrison Allen Whitney was born in Osage, Iowa and graduated from the Massachusetts Institute of Technology in architecture. 
       After working in Boston and Chicago, Whitney moved to Portland, Oregon as head draftsman for Whidden & Lewis. 
@@ -84,7 +84,7 @@ permalink: /whitney.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#whitney"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
     <br>
     <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
@@ -98,7 +98,7 @@ permalink: /whitney.html
       <br>
       <sub>Scandinavian American Bank Hotel, under construction
       <br>  
-      Photo by Richards Studio (D8652-33), 1920-03-31
+      Photo by Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/149086/rec/1">(BU-10892)</a>, 1920-03-31
       <br>  
      Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
@@ -107,7 +107,7 @@ permalink: /whitney.html
     <br>
     <sub>New York Waist House 
     <br>  
-    TPL Historic Building Files (BU-12524), 05-04-1927
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4087/rec/1">(BU-12524)</a>, 05-04-1927
     <br>
     Courtesy Northwest Room</sub>
   </div>
