--- a/pages/donnelly.html
+++ b/pages/donnelly.html
@@ -66,6 +66,10 @@ permalink: /donnelly.html
         <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a> 
         in 1922. The Hotel originally opened in 1897 and was demolished in 1925.</p>
       <br>
+      <p>Technical Drawings: 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt048">Sheet 1</a> 
+      <br> 
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt048"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
